docs: updating documentation
